# direct_map_localization

./: CMakeLists.txt  README.md  package.xml
include/direct_map_localization/: common.hpp  direct_localization.hpp  grid_map.hpp
launch/: direct_map_localization.launch
src/: direct_localization.cpp  grid_map.cpp  localization_node.cpp
